--- a/src/scss/blocks/content.scss
+++ b/src/scss/blocks/content.scss
@@ -3,7 +3,7 @@
     padding: 30px;
 
     &__inner {
-        max-width: 1385px;
+        //max-width: 1385px;
         display: flex;
         flex-direction: column;
         height: 100%;
