--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -25,6 +25,12 @@ html {
     flex-direction: column;
 }
 
+.top-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .page-title {
     font-weight: 500;
     font-size: 32px;
