--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -11,7 +11,8 @@ $color-link: #3A58FF;
 
 //btn colors
 
-$color-button-primary: #FF9C31;
+$color-button-primary: #3A58FF;
+$color-button-secondary: #3AACFF;
 $color-button-primary-focus: #FFAE56;
 $color-button-primary-active: #FF9018;
 
