--- a/src/views/_includes/blocks/aside.pug
+++ b/src/views/_includes/blocks/aside.pug
@@ -6,11 +6,11 @@ aside.sidebar
         h3.sidebar__title МОЙ КАБИНЕТ
         ul.sidebar__list
             li.sidebar__list--item
-                a.sidebar__link(href="#" class=(name === "teasers" ? "_active" : undefined)) 
+                a.sidebar__link(href="teasers.html" class=(name === "teasers" ? "_active" : undefined)) 
                     i.icon-teasers.icon
                     | Тизеры
             li.sidebar__list--item
-                a.sidebar__link(href="#" class=(name === "news" ? "_active" : undefined))
+                a.sidebar__link(href="news.html" class=(name === "news" ? "_active" : undefined))
                     i.icon-news.icon
                     | Новости
             li.sidebar__list--item
