--- a/src/views/_includes/blocks/pagination.pug
+++ b/src/views/_includes/blocks/pagination.pug
@@ -1,10 +1,10 @@
 ul.pagination
     li.pagination__item
         a(href="") 
-            i.icon-to-start
+            i.icon-start
     li.pagination__item
         a(href="")
-            i.icon-left-open
+            i.icon-prev
     li.pagination__item
         a(href="")._active 1
     li.pagination__item
@@ -21,7 +21,7 @@ ul.pagination
         a(href="") 10
     li.pagination__item
         a(href="")
-            i.icon-right-open
+            i.icon-next
     li.pagination__item
         a(href="")
-            i.icon-to-end
+            i.icon-end
