--- a/src/views/_includes/mixins/calendar.pug
+++ b/src/views/_includes/mixins/calendar.pug
@@ -3,4 +3,4 @@ mixin calendar()
         input(name="date")#date
         label(for="date")
             i.icon-calendar-1.icon
-            span.value 21.05.2019 - 26.05.2019
+            span.value 21/05/2019 - 26/05/2019
