--- a/src/scss/blocks/account-info.scss
+++ b/src/scss/blocks/account-info.scss
@@ -142,20 +142,20 @@
 
 .account-info__news {
     overflow: hidden;
-    max-height: 650px;
+    //max-height: 650px;
     overflow-y: auto;
-    &::-webkit-scrollbar {
-        width: 4px;
-    }
-
-    &::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: darkgrey;
-        outline: 1px solid slategrey;
-    }
+    //&::-webkit-scrollbar {
+    //    width: 4px;
+    //}
+    //
+    //&::-webkit-scrollbar-track {
+    //    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    //}
+    //
+    //&::-webkit-scrollbar-thumb {
+    //    background-color: darkgrey;
+    //    outline: 1px solid slategrey;
+    //}
 }
 
 @media screen and (max-width: 1200px) {
