--- a/src/scss/blocks/news.scss
+++ b/src/scss/blocks/news.scss
@@ -6,6 +6,12 @@
             flex-wrap: wrap;
         }
 
+        &--top {
+            .input-search {
+                flex: 0 1 600px;
+            }
+        }
+
         &--bottom {
             margin-top: 30px;
             > * {
@@ -29,64 +35,10 @@
 
     &__table {
 
-        th {
-            padding: 13px 20px;
-            text-align: start;
+        td.table-title {
+            width: 355px;
         }
 
-        td {
-            text-align: start;
-            padding: 4px 20px;
-        }
-
-        &--image {
-            width: 165px;
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-        }
-
-        &--h {
-            width: 300px;
-            text-align: start;
-            padding: 0 20px;
-        }
-
-        &--mark {
-            .category-mark {
-                padding: 8px 10px;
-                text-transform: uppercase;
-                font-weight: bold;
-                font-size: 12px;
-                line-height: 14px;
-                color: $color-white;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background: #D038FF;
-                border-radius: 4px;
-                width: 100px;
-                height: 30px;
-                margin: 0 auto;
-            }
-        }
-
-        &--lang {
-            img {
-                margin: 0 auto;
-            }
-        }
-
-        &--action {
-            width: 115px;
-            padding: 0 20px;
-            button {
-                width: 30px;
-                height: 30px;
-            }
-        }
     }
 }
 
