--- a/src/scss/blocks/pagination.scss
+++ b/src/scss/blocks/pagination.scss
@@ -1,30 +1,35 @@
 .pagination {
-    border-radius: 20px;
+    border-radius: 4px;
     background: $color-white;
     display: flex;
     overflow: hidden;
+    border: 1px solid #DFDFFF;
+
+    &-wrapper {
+        margin-top: 64px;
+    }
 
     &__item {
-        width: 40px;
+        width: 48px;
         a {
             width: 100%;
             height: 100%;
-            padding: 13px 0;
+            padding: 8px 0;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 14px;
-            line-height: 16px;
-            transition: background-color .2s ease, color .2s ease;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 32px;
+            transition: background-color .2s ease;
             &:hover, &._active {
-                background: $color-blue-light;
-                color: $color-white;
+                background: #D8E5FF;
             }
         }
     }
 
     &__item + &__item {
-        border-left: 1px solid rgba(138,167,224, .2);
+        border-left: 1px solid #DFDFFF;
     }
 }
 
