--- a/src/scss/blocks/render-count.scss
+++ b/src/scss/blocks/render-count.scss
@@ -1,8 +1,9 @@
 .record-count {
     display: flex;
     align-items: center;
-    font-size: 14px;
-    line-height: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 32px;
 
     .triangle-with-shadow {
         left: auto;
@@ -11,7 +12,6 @@
     }
 
     &__value {
-        font-weight: bold;
         margin-left: 15px;
         cursor: pointer;
         color: $color-blue-light;
