--- a/src/scss/blocks/search-info.scss
+++ b/src/scss/blocks/search-info.scss
@@ -1,10 +1,11 @@
 .search-info {
-    margin-left: 20px;
+    margin-left: 30px;
 
     &__title {
         font-size: 14px;
         line-height: 16px;
         color: $color-gray-dark;
+        margin-bottom: 8px;
     }
 
     &__text {
