--- a/src/scss/blocks/statistcs.scss
+++ b/src/scss/blocks/statistcs.scss
@@ -1,4 +1,4 @@
-.statistics {
+.page {
     &__table {
         margin-top: 30px;
 
@@ -7,25 +7,46 @@
         }
 
         table {
-            width: 980px;
-            th {
-                font-weight: bold;
-                padding: 13px 15px 13px 3px;
-            }
-
-            td {
-                text-align: center;
-                padding: 20px 4px;
-            }
+            width: 100%;
         }
 
-        &--filters, &--buttons {
+        &--filters {
             display: flex;
-            gap: 20px;
+            gap: 30px;
+        }
+
+        &--buttons {
+            display: flex;
+            gap: 15px;
         }
 
         &--filters {
             flex-wrap: wrap;
+        }
+
+        .active-tag {
+            padding-left: 30px;
+            &:before {
+                content: '';
+                width: 14px;
+                height: 14px;
+                border-radius: 50%;
+                top: 4px;
+                left: 0;
+                position: absolute;
+            }
+
+            &.active {
+                &::before {
+                    background-color: $color-red;
+                }
+            }
+
+            &.non-active {
+                &::before {
+                    background-color: $color-green;
+                }
+            }
         }
 
         &--actions {
@@ -40,6 +61,7 @@
             display: flex;
             align-items: center;
             flex-wrap: wrap;
+            margin-left: auto;
             .triangle-with-shadow {
                 left: auto;
                 transform: none;
@@ -48,25 +70,49 @@
             &-link {
                 display: flex;
                 align-items: center;
-                color: $color-blue-light;
+                font-size: 16px;
+                line-height: 24px;
                 transition: color .2s ease;
                 pointer-events: auto;
-                &:hover {
-                    color: $color-base;
-                }
                 .icon {
-                    margin-right: 5px;
+                    margin-left: 15px;
                 }
             }
         }
 
+        .settings-item {
+            display: flex;
+            align-items: center;
+        }
+
         .settings-item + .settings-item {
-            margin-left: 50px;
+            margin-left: 16px;
+        }
+
+        .export {
+            display: flex;
+            align-items: center;
+            background: #D8E5FF;
+            border-radius: 50px;
+            padding: 8px 16px;
+
+            .icon {
+                margin-left: 10px;
+            }
         }
 
         .setting-trigger {
-            padding: 5px 12px;
-            border-radius: 13px;
+            padding: 8px 16px;
+            border: 1px solid $color-link;
+            border-radius: 50px;
+            color: $color-link;
+            transition: background-color .2s ease, color .2s ease;
+
+            &:hover {
+                background-color: $color-link;
+                color: $color-white;
+            }
+
             &._opened {
                 background: $color-white;
                 .table-settings {
@@ -158,7 +204,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .statistics {
+    .teasers {
         .settings-item {
             font-size: 14px;
             line-height: 19px;
@@ -167,7 +213,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .statistics {
+    .teasers {
 
         &__table {
             &--settings {
