--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -1,11 +1,12 @@
 .btn {
-    display: block;
-    padding: 14px 35px;
-    border-radius: 30px;
-    font-size: 14px;
-    line-height: 16px;
-    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
+    border-radius: 4px;
     font-weight: bold;
+    font-size: 18px;
+    line-height: 32px;
     text-align: center;
 
     &-primary {
@@ -14,20 +15,25 @@
         transition: color .2s ease, background-color .2s ease;
 
         &:active, &:hover {
-            background: $color-button-primary-active;
+            background: fade-out($color-button-primary, .2)
         }
     }
 
     &-outlined {
-        background: $color-button-outlined;
-        color: $color-base;
+        background: fade-out($color-white, .15);
+        color: $color-link;
         transition: color .2s ease, background-color .2s ease;
-        border: 1px solid $color-base;
+        border: 1px solid $color-link;
 
         &:active, &:hover {
-            background: $color-button-outlined-active;
+            background: fade-out($color-button-primary, 0);
             color: $color-white;
         }
+    }
+
+    &-secondary {
+        background: $color-button-secondary;
+        color: $color-white;
     }
 }
 
