--- a/src/scss/components/filter.scss
+++ b/src/scss/components/filter.scss
@@ -1,17 +1,14 @@
 .filter {
-    border-radius: 8px;
-    padding: 0 10px;
     background: $color-white;
-    border: 1px solid $color-gray-dark;
-    flex: 1 0 auto;
+    flex: 0 1 285px;
     cursor: pointer;
     * {
         user-select: none;
     }
     &__item {
         cursor: pointer;
-        font-size: 14px;
-        line-height: 16px;
+        font-size: 18px;
+        line-height: 32px;
         &:not(:first-child) {
             border-top: 1px solid rgba(101,125,149,.15);
         }
@@ -27,9 +24,15 @@
     }
     &__header {
         overflow: hidden;
-        padding: 15px 25px 15px 0;
+        padding: 8px 32px 8px 16px;
         cursor: pointer;
         width: 100%;
+        font-weight: 500;
+        border: 1px solid rgba(83, 120, 251, 0.25);
+        border-radius: 4px;
+        &--title {
+            opacity: .4;
+        }
         .icon {
             position: absolute;
             right: -2px;
@@ -43,17 +46,16 @@
         left: -1px;
         width: calc(100% + 2px);
         background: $color-white;
-        //padding: 0 10px;
         display: none;
-        border: 1px solid $color-gray-dark;
-        border-bottom-left-radius: 8px;
-        border-bottom-right-radius: 8px;
+        box-shadow: 0 35px 80px rgba(133, 133, 175, 0.6);
+        border-radius: 4px;
         z-index: 5;
     }
 
     &._opened {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
+        .filter__header {
+            border: 1px solid rgb(83, 120, 251);
+        }
         .filter__body {
             display: block;
         }
@@ -70,18 +72,25 @@
         display: block;
         width: 100%;
         height: 100%;
-        padding: 15px 10px;
+        padding: 6px 16px;
         cursor: pointer;
         z-index: 2;
-        transition: background-color .2s ease;
+        transition: background-color .2s ease, opacity .2s ease;
+        font-size: 18px;
+        line-height: 32px;
+        opacity: .4;
         &:hover {
-            background-color: rgba(101,125,149,.15);
+            color: $color-white;
+            background: #5278FB;
+            opacity: 1;
         }
     }
 
     input:checked + label {
-        color: $color-yellow;
+        color: $color-white;
         font-weight: bold;
+        background: #5278FB;
+        opacity: 1;
     }
 
     &._opened + .label, &._selected + .label {
