--- a/src/scss/components/input.scss
+++ b/src/scss/components/input.scss
@@ -3,14 +3,14 @@
 }
 
 input.input {
-    background: $color-white;
-    border: 1px solid $color-gray-dark;
-    border-radius: 8px;
-    padding: 15px 10px 15px 0;
-    width: 100%;
-    cursor: pointer;
-    font-size: 14px;
-    line-height: 16px;
+    //background: $color-white;
+    //border: 1px solid $color-gray-dark;
+    //border-radius: 8px;
+    //padding: 15px 10px 15px 0;
+    //width: 100%;
+    //cursor: pointer;
+    //font-size: 14px;
+    //line-height: 16px;
 }
 
 label.label {
@@ -48,7 +48,7 @@ input.input._focus + label.label + .icon, input.input._valid + label.label + .ic
 }
 
 input.input._focus, input.input._focusout {
-    padding: 15px 10px;
+    //padding: 15px 10px;
 }
 
 input.input._focus {
@@ -78,6 +78,13 @@ textarea.textarea {
 }
 
 .input-search {
+    border: 1px solid rgba(83, 120, 251, 0.25);
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: $color-white;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 32px;
     .icon {
         position: absolute;
         left: 10px;
@@ -89,9 +96,15 @@ textarea.textarea {
     }
     label {
         left: 35px;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 32px;
+        top: 6px;
     }
     input {
-        padding-left: 40px !important;
+        padding: 8px 16px 8px 40px;
+        width: 100%;
+        cursor: pointer;
     }
 }
 
