--- a/src/scss/components/table.scss
+++ b/src/scss/components/table.scss
@@ -1,51 +1,59 @@
-table:not(.table-condensed) {
-    background: $color-white;
-    font-size: 14px;
-    line-height: 16px;
-    border-radius: 8px;
+table {
     overflow: hidden;
     width: 100%;
-    box-shadow: 0 3px 8px rgba(0, 0, 0, .05);
     margin: 30px 0;
-    thead {
-        box-shadow: 0 1px 5px rgba(0, 0, 0, .06);
-        border-bottom: 1px solid #f5f5f5;
+    border-collapse: inherit;
+    border-spacing: 0 8px;
+
+    .link {
+        text-decoration: underline;
     }
+
     th {
-        padding: 13px 20px;
+        padding: 18px 10px;
         text-align: start;
-        font-weight: bold;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 16px;
         cursor: pointer;
+
+        .icon-sort {
+            margin-left: 10px;
+        }
+
+        &.js-sort {
+            .icon-sort {
+                color: $color-link;
+            }
+        }
+
+        &.active {
+            width: 200px;
+            padding: 6px 25px;
+        }
     }
+
     td {
         text-align: start;
-        padding: 4px 20px;
+        padding: 6px 10px;
+        background-color: $color-white;
+        &.table-title {
+            width: 290px;
+        }
+        &.table-image {
+            width: 140px;
+        }
+        &.active {
+            width: 200px;
+            padding: 6px 25px;
+        }
     }
-    td + td {
-        border-left: 1px solid #f5f5f5;
-    }
-    tr + tr {
-        border-top: 1px solid #f5f5f5;
-    }
-    th + th {
-        border-left: 1px solid #f5f5f5;
-    }
+
     tbody {
-        tr:nth-child(odd) {
-            background-color: rgba(138,167,224,.1);
-        }
-    }
-
-    tr {
-        cursor: pointer;
-        transition: background-color .3s ease;
-        &:hover {
-            background-color: rgba(66,130,255,.1) !important;
-        }
-    }
-
-    tfoot tr {
-        font-weight: bold;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
     }
 
     .sort-icons {
@@ -71,9 +79,74 @@ table:not(.table-condensed) {
         }
     }
 
-    .action-elem {
-        width: 30px;
-        height: 30px;
+    .actions {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &__item {
+            padding: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &.preview {
+                color: $color-link;
+                font-size: 14px;
+            }
+
+            &.edit {
+                color: #8080A7;
+            }
+
+            &.archive {
+                color: #FF3A3A;
+            }
+
+            &:hover {
+                opacity: .7;
+            }
+        }
+
+        .icon::before {
+            margin: 0;
+            width: 100%;
+        }
+    }
+
+    .category {
+        padding: 8px 16px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 18px;
+        border-radius: 4px;
+        color: $color-white;
+
+        &-tag {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+        }
+
+        &.category-health {
+            background-color: $color-green;
+        }
+
+        &.category-politics {
+            background-color: #78A6FF;
+        }
+
+        &.show-business {
+            background-color: #B870F0;
+        }
+
+        &.category-sport {
+            background-color: #FFA800;
+        }
+
+        &.category-special {
+            background-color: #F07070;
+        }
     }
 
     .empty-text {
