--- a/src/views/_includes/blocks/renderCount.pug
+++ b/src/views/_includes/blocks/renderCount.pug
@@ -2,7 +2,7 @@
     span Отобразить по
     .record-count__value 
         span.value 10
-        i.icon-down-dir.icon
+        i.icon-down-open-mini.icon
     ul.record-count__options
         .triangle-with-shadow
         li.record-count__option(rel="5") 5
